Bug Fix: Cursor Stretched During Tab Capturing On Windows

On Windows 10, the mouse cursor is vertically stretched during
screen capturing.

This CL fixes the bug.

BUG=655198

Review-Url: https://chromiumcodereview.appspot.com/2423293003
Cr-Commit-Position: refs/heads/master@{#426589}

Former-commit-id: b5f188496d88bbef4ec99ee84742f61380f8516e